--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,11 +3,13 @@
   <h1>
     Welcome to {{ title }}!
   </h1>
-  <ngx-spinner></ngx-spinner>
+  <ngx-spinner bdColor="rgba(51,51,51,0.8)"
+  size="medium"
+  color="#fff"
+  type="ball-scale-multiple"></ngx-spinner>
 
   <div id = "sse">
     <button (click) = "WebSocketDemoTest('Done')">Run WebSocket</button>
     <button (click) = "WebSocketDemoTest('Loading')">Loading WebSocket</button>
  </div>
 </div>
-
